Delete trailing slash

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 低频咖啡间
 description: | 
   Virgil Ming 写字的地方。
-baseurl: "/LFCafe/" # the subpath of your site, e.g. /blog/
+baseurl: "/LFCafe" # the subpath of your site, e.g. /blog/
 url: "http://virgilming.github.io" # the base hostname & protocol for your site
 
 # Build settings
